2006-07-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* engines/crux/src/crux-draw.c: (draw_extension):
	* engines/lighthouseblue/src/lighthouseblue_style.c:
	(draw_extension):
	  Fix for new notebook dnd code. Both themes used the parent widget 
	  witholut checking for NULL before.

2006-07-18   Andrew Johnson <acjgenius@earthlink.net>

	* engines/hc/Makefile.am:
	* engines/hc/src/hc-main.c:
	* engines/hc/src/hc-rc-style.c:
	* engines/hc/src/hc-rc-style.h:
	* engines/hc/src/hc-style.c: (hc_draw_shadow), (hc_draw_extension),
	(hc_draw_check), (hc_draw_option), (hc_draw_tab),
	(hc_draw_shadow_gap), (hc_draw_arrow), (hc_draw_flat_box),
	(hc_draw_box_gap), (hc_draw_handle), (hc_draw_hline),
	(hc_draw_vline), (hc_draw_polygon):
	* engines/hc/src/hc-style.h:
	* engines/hc/src/hc_gtk2_drawing.h:
	* engines/hc/src/hc_gtk2_engine.c: (hc_rc_style_create_style),
	(hc_rc_style_class_init), (hc_rc_style_register_type),
	(hc_style_realize), (hc_style_class_init),
	(hc_style_register_type), (theme_init), (theme_exit),
	(theme_create_rc_style):
	* engines/hc/src/hc_gtk2_engine.h:
	* engines/hc/src/hc_gtk2_support.c: (hc_simple_border_gap_clip),
	(do_hc_draw_arrow), (do_hc_draw_line), (do_hc_draw_dot):
	* engines/hc/src/hc_gtk2_support.h:

	- Beging to reorganize code structure
	- Start reworking gap & extension functions
	- Add warnings for gdk code not converted
	- Improve Options menus
	- Start reworking thickness line width ratio
	- Start improving Check(ratios/offsets still wrong)

	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_check),
	(redmond_draw_option), (redmond_draw_arrow),
	(redmond_draw_combobox_button), (redmond_draw_spinbutton_stepper),
	(redmond_draw_box), (redmond_draw_slider),
	(redmond_draw_extension), (redmond_draw_handle):
	* engines/redmond/src/redmond_gtk2_engine.c:
	(redmond_simple_color_pattern), (redmond_simple_pixmap_pattern),
	(redmond_simple_hatch_mask_pattern), (redmond_style_realize),
	(redmond_style_unrealize):